--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,33 @@
-# Port number
+# Port
 PORT=3000
 
-# URL of the Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+# MongoDB URI
+MONGODB_URI=
 
 # JWT
-# JWT secret key
-JWT_SECRET=thisisasamplesecret
-# Number of minutes after which an access token expires
-JWT_ACCESS_EXPIRATION_MINUTES=30
-# Number of days after which a refresh token expires
-JWT_REFRESH_EXPIRATION_DAYS=30
-# Number of minutes after which a reset password token expires
-JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
-# Number of minutes after which a verify email token expires
-JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
+JWT_SECRET=
+JWT_EXPIRY=
 
-# SMTP configuration options for the email service
-# For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
+# Google OAuth 2.0
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Redis URI
+REDIS_URI=redis://<REDIS_USER>:<REDIS_PASS>@<REDIS_ENDPOINT>:<REDIS_PORT>
+
+# SMTP (Email) Credentials
 SMTP_HOST=email-server
 SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# Secrets
+ADMIN_SECRET=
+
+# Logz.io
+LOGZIO_HOST=
+LOGZIO_TOKEN=
+
+# Frontend
+FRONTEND_URL=
